fix service and controller teste